# cpputils

./: CMakeLists.txt  README.md
cmake/: distclean.cmake  libcheck.cmake
include/cpputils/: filesystem.h  process.h  regex.h  string.h
src/: filesystem.cpp  process.cpp  regex.cpp  string.cpp
test/src/: main.cpp  regex.cpp  string.cpp
